<?xml version="1.0"?>
<package format="2">
  <name>hellocm</name>
  <version>0.9.0</version>
  <description>
    External ROS Node for simple communication with CarMaker.
  </description>
  <maintainer email="no@support.com">IPG Automotive GmbH/dbe</maintainer>
  <license>IPG Automotive GmbH</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>hellocm_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>hellocm_msgs</exec_depend>
</package>
